[package]
name = "renovate-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.0.0"
serde = "1.0.100"
serde_json = "1.0.50"
reqwest = "0.11.0"
rand = "0.7.0"
log = "0.4.8"
env_logger = "0.7.0"
chrono = "0.4.15"
clap = "2.33.0"
async-trait = "0.1.40"
futures = "0.3.5"
thiserror = "1.0.20"
anyhow = "1.0.32"
actix-web = "3.0.0"
uuid = "0.8.1"
regex = "1.3.9"
lazy_static = "1.4.0"
parking_lot = "0.10.0"
tracing = "0.1.19"
diesel = "1.4.5"
sqlx = "0.5.0"
rustls = "0.18.0"
rayon = "1.4.0"
bytes = "0.5.6"
once_cell = "1.4.0"
crossbeam = "0.7.3"
dashmap = "3.11.10"
derive_more = "0.99.0"
rust-crypto = "0.2.36"
config = "0.10.1"

[dev-dependencies]
mockall = "0.8.0"
